# py_stb_image

./: CMakeLists.txt  README.md  pyproject.toml
stb_image_wrapper/: wrapper.cpp
