[build-system]
requires = ["scikit-build-core", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "stb_image_wrapper"
version = "0.1.0"
description = "Python bindings for stb_image.h and stb_image_write.h"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["stb_image_wrapper"]
